# libwlmio

./: .gitignore  50-wlmio.network  LICENSE  Makefile  README.md  meson.build  wlmio.txt
DEBIAN/: control  postinst  postrm  preinst
debian/: changelog  control  copyright  postinst  postrm  preinst
overlay/: meson.build  wlmio-pi5.dts  wlmio.dts
src/libcanard/: meson.build
src/libwlmio/: io.c  meson.build  sync.c  wlmio.c  wlmio.h
src/modbusd/: main.c  meson.build
src/pywlmio/: meson.build  pywlmio.py  wlmio.c
src/tools/: 6040_10vcal.c  6040_5vcal.c  6040macal.c  6050cal.c  6070cal.c  6090cal.c  6090ccal.c  6180a_cal.c  6190a_conf.c  factoryreset.c  fwupdate.c  infodump.c  meson.build  monitor.c  regtool.c  store.c
subprojects/: libgpiod.wrap
subprojects/packagefiles/libgpiod/: meson.build
