executable('6040macal', '6040macal.c', dependencies: [wlmio_dep], install: true)
executable('6050cal', '6050cal.c', dependencies: [wlmio_dep], install: true)
executable('6070cal', '6070cal.c', dependencies: [wlmio_dep], install: true)
executable('6090cal', '6090cal.c', dependencies: [wlmio_dep], install: true)
executable('6090ccal', '6090ccal.c', dependencies: [wlmio_dep], install: true)
executable('6180a_cal', '6180a_cal.c', dependencies: [wlmio_dep], install: true)
executable('6190a_conf', '6190a_conf.c', dependencies: [wlmio_dep], install: true)
executable('factoryreset', 'factoryreset.c', dependencies: [wlmio_dep], install: true)
executable('fwupdate', 'fwupdate.c', dependencies: [canard_dep, libgpiod_dep], install: true)
executable('infodump', 'infodump.c', dependencies: [wlmio_dep], install: true)
executable('monitor', 'monitor.c', dependencies: [wlmio_dep], install: true)
executable('regtool', 'regtool.c', dependencies: [wlmio_dep], install: true)
executable('store', 'store.c', dependencies: [wlmio_dep], install: true)
